2009-06-30  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* Now we remove old records before inserting new records into the
	database. (added DELETE statement)
	* Result count is now shown.
	* default_version is added to settings.py, version format changed to
	"pardus-2009" from "2009".
	* Added 3 character limit for grouped results.
	* Updated translations... Added es.mo
	* Added Turkish character support

2009-06-29  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* Firefox search engine add-on updated for repo Pardus-2009.
	* Pagination support added. Default result/page is 100.
	* URLs are updated when searched via form by directing.
	* Switched to GET method instead of POST. (for pagination urls: /?page=1)
	* Bugs fixed:
		- Listing the packages by /search/repo/packages/ now works. (used to
		search items like "packages".
		- Checkbox is now more easygoing! (removed checked="false"!)
	* KNOWN ISSUE: We can't paginate results that are wanted to be grouped.
	
2009-06-29  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* URL Changed: package/pkg_name/list/ -> packages/pkg_name/
	* Fixed minor bugs:
		* extra entry parameter
		* unused version parameter used for filtering
		* package_name -> entry.package
		* Some comment fixes

2009-06-29  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* Cleared up some old code (from multi-table system)
	* Theme adapted to color "lal".
	* Added a welcome, guide text.
	* Updated po/mo files.

2009-06-29  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* We now use only one table (packages) and one model (Repo).
	* Added package information page links on the result pages.
	* Added Pardus 2009 support.

2008-12-10  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* Cleaned up SQL Generator script.
	* Package Search Website models are changed: Pardus2007, Pardus2008 and
	Contrib2008. They use table names of pardus_2007, pardus_2008 and
	contrib_2008.